adiciona pasta public

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="interface">
           <div class="flex">
             <div class="img-sobre">
-              <img src="images/foto.png" alt>
+              <img src="./public/Imagem/Profile.png" alt>
             </div>
             <!--img-sobre-->
 
@@ -231,7 +231,7 @@
 
           <div class="projects">
             <div class="card">
-              <img src="./imagem/ataque.png"
+              <img src="./public/Imagem/ataque.png"
                 alt="ataque">
               <h1>. . . .</h1>
               <h2 class="titulo">Ataque a porta <span> aberta.</span></h2>
@@ -256,7 +256,7 @@
 
             <div class="projects">
               <div class="card">
-                <img src="./imagem/conhecendo.png" alt="conhecendo redes">
+                <img src="./public/Imagem/conhecendo.png" alt="conhecendo redes">
                 <h1>. . . .</h1>
                 <h2 class="titulo">Conhecendo <span> redes e
                     Mikrotik.</span></h2>
@@ -281,7 +281,7 @@
 
               <div class="projects">
                 <div class="card">
-                  <img src="./imagem/descomplicando.png"
+                  <img src="./public/Imagem/descomplicando.png"
                     alt="descomplicando redes">
                   <h1>. . . .</h1>
                   <h2 class="titulo">Descomplicando redes <span>Parte
